<resources>
    <string name="app_name">LoveCalculator</string>
    <string name="love_calculator">Love Calculator</string>
    <string name="second_name">Second Name</string>
    <string name="me">me</string>
    <string name="you">you</string>
    <string name="first_name">First Name</string>
    <string name="calculate">calculate</string>
    <string name="calculate2">Calculate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="try_again">Try again</string>
    <string name="score">Score</string>
    <string name="get_started">Get Started</string>
    <string name="text">text</string>
    <string name="text2">text</string>
    <string name="history">History</string>
    <string name="precentage">precentage</string>
</resources>